--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "ASITHA-MD",
-  "description": "Javascript WhatsApp bot made by Asitha",
-  "logo": "https://telegra.ph/file/38a4ba6f7a51c15f5feaf.jpg",
+  "name": "ANUWH-MD",
+  "description": "Javascript WhatsApp bot made by Anuga",
+  "logo": "https://postimg.cc/nX6ZH38b",
   "keywords": ["bot"],
   "success_url": "/",
 
